Add: support for PHP Copy/Paste Detector (PHPCPD)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 # Pre-commit
 # @see http://pre-commit.com/
 - repo: git://github.com/justin-at-demac/pre-commit-hooks
+  rev: master
   hooks:
     - id: check-yaml
       files: \.(yaml|yml)$
